deployment/k8s/menifests/order-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: bcf24-tm-ns
  name: order-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: 863518452741.dkr.ecr.ap-south-1.amazonaws.com/bcf24/order:latest
          ports:
            - containerPort: 8003
          resources:
            requests:
              memory: "128Mi"
              cpu: "5m"
            limits:
              memory: "256Mi"
              cpu: "250m"
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  namespace: bcf24-tm-ns
  name: order-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8003
      protocol: TCP
  selector:
    app: order
