deployment/k8s/menifests/registration-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: bcf24-tm-ns
  name: registration-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registration
  template:
    metadata:
      labels:
        app: registration
    spec:
      containers:
        - name: registration
          image: 863518452741.dkr.ecr.ap-south-1.amazonaws.com/bcf24/registration:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "5m"
            limits:
              memory: "256Mi"
              cpu: "250m"
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  namespace: bcf24-tm-ns
  name: registration-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: registration
