deployment/k8s/menifests/ingress-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hackathon-ingress
  namespace: bcf24-tm-ns
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ip-address-type: ipv4
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type":"redirect","RedirectConfig":{"Protocol":"HTTPS","Port":"443","StatusCode":"HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:863518452741:certificate/6c378461-1ff8-4702-82db-a1a12b0a9524
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-2021-06
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - host: api.projectsbd.me
      http:
        paths:
          - path: /v1/registration
            pathType: Prefix
            backend:
              service:
                name: registration-service
                port:
                  number: 80
    - host: api.projectsbd.me
      http:
        paths:
          - path: /v1/ticket
            pathType: Prefix
            backend:
              service:
                name: ticket-service
                port:
                  number: 80
    - host: api.projectsbd.me
      http:
        paths:
          - path: /v1/order
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 80
    - host: api.projectsbd.me
      http:
        paths:
          - path: /v1/payment
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 80
